# plasmoji

./: .gitignore  PKGBUILD  README.md  install.sh  pyproject.toml
assets/: plasmoji.service
qml/: main.qml
src/plasmoji/: __init__.py  __main__.py  bridge.py  controller.py  database.py  dbus_service.py  injector.py  main.py  network.py
